Update to 3.7.8