@@ -7,7 +7,6 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import net.minecraft.commands.CommandBuildContext;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.SharedSuggestionProvider;
 import net.minecraft.network.chat.Component;
@@ -15,18 +14,17 @@ import net.minecraft.resources.ResourceLocation;
 import net.tslat.aoa3.common.registration.AoARegistries;
 import net.tslat.aoa3.player.resource.AoAResource;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 public class AoAResourceArgument implements ArgumentType<AoAResource> {
-	private static final List<String> EXAMPLES = Arrays.asList("aoa3:spirit");
-	private static final DynamicCommandExceptionType UNKNOWN_RESOURCE_ERROR = new DynamicCommandExceptionType(input -> Component.translatable("argument.aoa.resource.notFound"));
+	private static final List<String> EXAMPLES = List.of("aoa3:spirit");
+	private static final DynamicCommandExceptionType UNKNOWN_RESOURCE_ERROR = new DynamicCommandExceptionType(input -> Component.translatable("argument.aoa3.resource.notFound"));
 
 	public AoAResourceArgument() {}
 
-	public static AoAResourceArgument resource(CommandBuildContext context) {
+	public static AoAResourceArgument resource() {
 		return new AoAResourceArgument();
 	}
 
